--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.einfachhans.emailcomposer">
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.ACTION_SENDTO" />
+            <data android:scheme="mailto" />
+        </intent>
+    </queries>
+      <application>
+            <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+      </application>
 </manifest>
